# Tiny-Space

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-project-hooks.yaml  README.md  Readme.md  buildings.py  config.py  cursor.py  debug.py  game.py  grid.py  helpers.py  index.html  main.py  pyproject.toml  resources.py  run  sidebar.py  templates.py  tests.py  thing.py  tiles.py  tiny-space.apk  world.py
.github/workflows/: pybag.yml
tests/: test_schematic.py
tiny_space/: buildings.py  cursor.py  debug.py  game.py  grid.py  helpers.py  main.py  resources.py  score.py  sidebar.py  templates.py  thing.py  tiles.py  world.py
