[tool.poetry]
name = "tiny-space"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pygame = "^2.5.2"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-requirements = "^2.1.1"
pylint = "^3.1.0"
yesqa = "^1.5.0"
pydantic = "^2.6.4"
typing-extensions = "^4.10.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
# Specify default files
# Use pydantic plugin
plugins = "pydantic.mypy"

# Check the body of every function, regardless of whether it has type annotations
check_untyped_defs = true
# Warn about casts that do nothing
warn_redundant_casts = true
# Warn about "type: ignore" comments that do nothing
warn_unused_ignores = true
# Warn when a function is missing return statements in some execution paths
warn_no_return = true
# Warn about code determined to be unreachable or redundant after performing type analysis
warn_unreachable = true
# Allow variables to be redefined with a different type
allow_redefinition = true
# Prefixes each error with the relevant context
show_error_context = true
# Shows error codes in error messages, so you can use specific ignore comments i.e., "type: ignore[code]"
show_error_codes = true
# Use visually nicer output in error messages: use soft word wrap, show source code snippets, and show error location
# markers.
pretty = true


[tool.black]
line-length = 120
